--- a/Level 01/Task 01 - Landing Page/index.html
+++ b/Level 01/Task 01 - Landing Page/index.html
@@ -16,10 +16,10 @@
             <div class="logo"><img src="logo-removebg-preview.png" alt=""></div>
             <div class="middle">
                 <ul>
-                    <li>Home</li>
-                    <li>Courses</li>
-                    <li>About</li>
-                    <li>Contect</li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#courses">Courses</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contect">Contect</a></li>
                 </ul>
             </div>
             <div class="sidepart">
@@ -34,7 +34,7 @@
     <!-- navbar end here -->
 
     <!-- hero section start here -->
-    <div class="hero">
+    <div class="hero" id="home">
         <div class="text">
             <h1>BUILD YOUR</h1>
             <h1>TECH CARRIER</h1>
@@ -51,7 +51,7 @@
     <div class="linebar"></div>
 
     <!-- card section start here -->
-    <div class="card-outer">
+    <div class="card-outer" id="courses">
         <div class="centerpart">
             <div class="head-text">
                 <p>WHY CODE-HELP?</p>
@@ -134,7 +134,7 @@
     <div class="linebar high"></div>
 
     <!-- social media part start -->
-    <div class="social-outer">
+    <div class="social-outer" id="contect">
         <div class="title">
             <div class="title-head">Join our Coding family</div>
             <div class="title-para">
@@ -152,7 +152,7 @@
     <!-- social media part end -->
 
     <!-- footer section start here -->
-    <div class="footer-most-outer">
+    <div class="footer-most-outer" id="about">
         <div class="footer-outer">
             <div class="leftpart">
                 <div class="left-img"><img src="logo-removebg-preview.png" alt=""></div>
