third project commit temperature

--- a/Level 01/Task 02 - Portfolia/index.html
+++ b/Level 01/Task 02 - Portfolia/index.html
@@ -219,15 +219,15 @@
                 <form action="">
                     <h2>Send Message</h2>
                     <div class="input_box">
-                        <input type="text" name="" required="required">
+                        <input type="text" id="name" name="" required="required">
                         <span>Full Name</span>
                     </div>
                     <div class="input_box">
-                        <input type="text" name="" required="required">
+                        <input type="text" name="" id="email" required="required">
                         <span>Email</span>
                     </div>
                     <div class="input_box">
-                        <input type="text" name="" required="required">
+                        <input type="text" name="" id="message" required="required">
                         <span>Type your Message...</span>
                     </div>
                     <div class="contact_btn"><button>Send</button></div>
